--- a/Alphasoft/Views/ClientView/Faq.cshtml
+++ b/Alphasoft/Views/ClientView/Faq.cshtml
@@ -1,50 +1,27 @@
 ﻿@model FaqVm
 
 <div role="main" class="main">
-
-    <section class="page-header page-header-classic">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <ul class="breadcrumb">
-                        <li><a href="#">Home</a></li>
-                        <li class="active">Pages</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col p-static">
-                    <h1 data-title-border>FAQ</h1>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
     <div class="container py-4">
-
         <div class="row">
             <div class="col">
-
-                <h2 class="font-weight-normal text-7 mb-2">Frequently Asked <strong class="font-weight-extra-bold">Questions</strong></h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In eu libero ligula.</p>
+                <h2 class="font-weight-normal text-center text-7 mb-2">How can we <strong class="font-weight-extra-bold">HELP</strong> you?</h2>
+                <p class="lead"></p>
 
                 <hr class="solid my-5">
 
                 <div class="toggle toggle-primary" data-plugin-toggle>
-                    <section class="toggle active">
-                        <label>Curabitur eget leo at velit imperdiet vague iaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis quam sit.</p>
-                    </section>
+                    @*<section class="toggle">
+                            <label>Curabitur eget leo at velit imperdiet vague iaculis vitaes?</label>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis quam sit.</p>
+                        </section>*@
 
                     @foreach (var item in Model.Faqs)
                     {
                         <section class="toggle">
-                            <label>@item.Question ?</label>
+                            <label>@item.Question?</label>
                             <p>@Html.Raw(item.Answer)</p>
                         </section>
                     }
-
                 </div>
 
             </div>
