Model and Repository

--- a/Alphasoft/Views/AboutUses/_Create.cshtml
+++ b/Alphasoft/Views/AboutUses/_Create.cshtml
@@ -149,6 +149,7 @@
             success: function (response) {
                 $("#aboutus-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#aboutUs-createModal").modal('hide');
             }
         });
     });
