--- a/Alphasoft/Views/AboutUses/_Edit.cshtml
+++ b/Alphasoft/Views/AboutUses/_Edit.cshtml
@@ -31,11 +31,11 @@
                 <input asp-for="OurVission" type="text" class="form-control" />
                 <span asp-validation-for="OurVission" class="text-danger"></span>
             </div>
-          
+
             <div id="datatoggle">
                 <div class="form-group">
                     <label asp-for="OurVissionDescription"></label>
-                    <textarea id="d3" asp-for="OurVissionDescription" ></textarea>
+                    <textarea id="d3" asp-for="OurVissionDescription"></textarea>
                     <span asp-validation-for="OurVissionDescription" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -44,7 +44,7 @@
                     <span asp-validation-for="WhyUs" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label  asp-for="WhyUsDescription"></label>
+                    <label asp-for="WhyUsDescription"></label>
                     <textarea id="d4" asp-for="WhyUsDescription"></textarea>
                     <span asp-validation-for="WhyUsDescription" class="text-danger"></span>
                 </div>
@@ -93,33 +93,31 @@
     <div id="alert"></div>
     <button class="btn btn-success form-control" type="submit">Save</button>
 </form>
-
-
 <script>
     $("#d1").summernote({
-        height:80
+        height: 80
     });
     $("#d2").summernote({
-        height:80
+        height: 80
     });
     $("#d3").summernote({
-        height:80
+        height: 80
     });
     $("#d4").summernote({
-        height:80
+        height: 80
     });
     $("#d5").summernote({
-        height:80
+        height: 80
     });
-   
+
     $("#aboutUs-EditForm").on("submit", function (e) {
         e.preventDefault();
-       let formData = new FormData();
+        let formData = new FormData();
 
         let aboutus = objectifyForm($(this).serializeArray());
-         formData.append("image1", $("#logo1")[0].files[0]);
-         formData.append("image2", $("#logo2")[0].files[0]);
-         formData.append("image3", $("#logo3")[0].files[0]);
+        formData.append("image1", $("#logo1")[0].files[0]);
+        formData.append("image2", $("#logo2")[0].files[0]);
+        formData.append("image3", $("#logo3")[0].files[0]);
 
 
         for (var key in aboutus) {
@@ -134,6 +132,7 @@
             success: function (response) {
                 $("#aboutus-editFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#aboutus-editModal").modal('hide');
             }
         });
     });
@@ -146,5 +145,5 @@
         let logo_preview = $("#logo-preview1");
         fileOnSelect(maxWidth, maxHeight, input, preview, logo_preview);
     });
-    
+
 </script>
