--- a/Alphasoft/Views/AboutUses/Index.cshtml
+++ b/Alphasoft/Views/AboutUses/Index.cshtml
@@ -15,19 +15,13 @@
             <thead>
                 <tr>
                     <th>Id</th>
-                    <th>About Main Sologan</th>
-                    <th>About Main Sologan Description</th>
-                    <th>Our Mission</th>
-                    <th>Our Mission Description</th>
-                    <th>Our Vission</th>
-                    <th>Our Vission Description</th>
-                    <th>WhyUs</th>
-                    <th>WhyUs Description</th>
-                    <th>Who WeAre</th>
-                    <th>Who WeAre Description</th>
-                    <th>ImageOne</th>
-                    <th>ImageTwo</th>
-                    <th>ImageThree</th>
+                    <th>AboutMainSologan</th>
+                    <th>OurMissionDescription</th>
+                    <th>OurVisionDescription</th>
+                    <th>WhyUsDescription</th>
+                    <th>WhoWeAreDescription </th>
+                    <th>WhoWeAreImageOne</th>
+                    <th>WhoWeAreImageTwo</th>
                     <th></th>
                 </tr>
             </thead>
