--- a/Alphasoft/Views/Home/Index.cshtml
+++ b/Alphasoft/Views/Home/Index.cshtml
@@ -113,13 +113,10 @@
     </div>
 </div>
 
-<hr class="my-0">
 
 <section class="section bg-color-light border-0 m-0" id="sec_1">
     
 </section>
-
-<hr class="my-0">
 
 <div class="container-fluid" id="sec_2">
     <div class="loader">
@@ -131,19 +128,17 @@
     </div>
 </div>
 
-<hr class="my-0">
-
-<div class="container" id="sec_3">
-    <div class="loader">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+<section class="section section-default border-0 my-5 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="750">
+    <div class="container" id="sec_3">
+        <div class="loader">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
-</div>
-
-<hr class="my-0">
+</section>
 
 <div class="container pt-5" id="sec_4">
     <div class="loader">
@@ -155,8 +150,6 @@
     </div>
 </div>
 
-<hr class="my-0">
-
 <section class="section section-height-3 bg-color-grey m-0 border-0" id="sec_5">
     <div class="loader">
         <span></span>
@@ -167,8 +160,6 @@
     </div>
 </section>
 
-<hr class="my-0">
-
 <section class="bg-color-light border-0 pt-5 mt-0" id="sec_6">
     <div class="loader">
         <span></span>
@@ -178,8 +169,6 @@
         <span></span>
     </div>
 </section>
-
-<hr class="my-0">
 
 <div id="sec_7">
     <div class="loader">
