--- a/Alphasoft/Views/ClientView/Faq.cshtml
+++ b/Alphasoft/Views/ClientView/Faq.cshtml
@@ -3,24 +3,22 @@
 <div role="main" class="main">
     <div class="container py-4">
         <div class="row">
-            <div class="col">
-                <h2 class="font-weight-normal text-center text-7 mb-2">How can we <strong class="font-weight-extra-bold">HELP</strong> you?</h2>
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <h2 class="font-weight-normal text-center text-7 mb-1">How can we <strong class="font-weight-extra-bold">HELP</strong> you?</h2>
                 <p class="lead"></p>
 
                 <hr class="solid my-5">
 
-                <div class="toggle toggle-primary" data-plugin-toggle>
-                    @*<section class="toggle">
-                            <label>Curabitur eget leo at velit imperdiet vague iaculis vitaes?</label>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis quam sit.</p>
-                        </section>*@
-
+                <div id="accordion">
                     @foreach (var item in Model.Faqs)
                     {
-                        <section class="toggle">
-                            <label>@item.Question?</label>
-                            <p>@Html.Raw(item.Answer)</p>
-                        </section>
+                        <h3 class="collapse_jquery_h3">Q. @item.Question</h3>
+                        <div class="collapse_jquery_div">
+                            <p class="collapse_jquery_p">
+                                @Html.Raw(item.Answer)
+                            </p>
+                        </div>
                     }
                 </div>
 
@@ -31,3 +29,43 @@
     </div>
 
 </div>
+
+@section Styles{
+    <style>
+        .collapse_jquery_h3 {
+            background-color: #08c;
+            border: none;
+            color: #fff;
+            font-weight: 600;
+            font-size: 110% !important;
+        }
+
+        .collapse_jquery_p {
+            color: #111;
+            padding: 0;
+            margin: 0;
+        }
+
+            .collapse_jquery_p p {
+                padding: 0;
+                margin: 0;
+            }
+
+        .ui-icon {
+            width: 20px !important;
+            height: 16px !important;
+        }
+    </style>
+}
+
+
+@section Scripts{
+    <script>
+        (function () {
+            $("#accordion").accordion({
+                collapsible: true,
+                active: false
+            });
+        })();
+    </script>
+}
