--- a/Alphasoft/Views/Shared/_ClientLayout.cshtml
+++ b/Alphasoft/Views/Shared/_ClientLayout.cshtml
@@ -7,7 +7,7 @@
     Company isCompanyExist = _work.Companies.FirstOrDefault();
     Company company = isCompanyExist == null ? new Company() : isCompanyExist;
 
-    List<Menu> menuList = _work.Menus.GetAll();
+    List<Menu> menuList = _work.Menus.GetAllActive();
     List<Menu> menus = menuList.Where(x => x.ParentId == 0).ToList();
     List<Menu> subMenus = new List<Menu>();
 
