--- a/Alphasoft/Views/Services/_Create.cshtml
+++ b/Alphasoft/Views/Services/_Create.cshtml
@@ -22,6 +22,11 @@
                 </select>
                 <span asp-validation-for="ServiceCategoryId" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="IconClassName"></label>
+                <input asp-for="IconClassName" type="text" class="form-control" />
+                <span asp-validation-for="IconClassName" class="text-danger"></span>
+            </div>
         </div>
     </div>
     <div class="form-group">
