--- a/Alphasoft/Views/Shared/_ClientLayout.cshtml
+++ b/Alphasoft/Views/Shared/_ClientLayout.cshtml
@@ -164,7 +164,7 @@
                                                         if (menu.DropdownType == "1")
                                                         {
                                                             <li class="dropdown dropdown-full-color dropdown-light dropdown-mega">
-                                                                <a class="dropdown-item dropdown-toggle" href="elements.html">
+                                                                <a class="dropdown-item dropdown-toggle" href="/ClientView/Softwares">
                                                                     Software
                                                                     <i class="fas fa-chevron-down"></i>
                                                                 </a>
@@ -196,7 +196,7 @@
                                                                                                 <ul class="dropdown-mega-sub-nav">
                                                                                                     @foreach (var item in subMenuList)
                                                                                                     {
-                                                                                                        <li><a class="dropdown-item" href="elements-accordions.html">@item.Name</a></li>
+                                                                                                        <li><a class="dropdown-item" href="/ClientView/CategoryWiseSoftware/@item.Id">@item.Name</a></li>
                                                                                                     }
                                                                                                 </ul>
                                                                                             </div>
@@ -210,7 +210,7 @@
                                                                                                 <ul class="dropdown-mega-sub-nav">
                                                                                                     @foreach (var item in subMenuList)
                                                                                                     {
-                                                                                                        <li><a class="dropdown-item" href="elements-accordions.html">@item.Name</a></li>
+                                                                                                        <li><a class="dropdown-item" href="/ClientView/CategoryWiseSoftware/@item.Id">@item.Name</a></li>
                                                                                                     }
                                                                                                 </ul>
                                                                                             </div>
@@ -223,7 +223,7 @@
                                                                                             <ul class="dropdown-mega-sub-nav">
                                                                                                 @foreach (var item in subMenuList)
                                                                                                 {
-                                                                                                    <li><a class="dropdown-item" href="elements-accordions.html">@item.Name</a></li>
+                                                                                                    <li><a class="dropdown-item" href="/ClientView/CategoryWiseSoftware/@item.Id">@item.Name</a></li>
                                                                                                 }
                                                                                             </ul>
                                                                                         </div>
