--- a/Alphasoft/Views/Shared/_Layout.cshtml
+++ b/Alphasoft/Views/Shared/_Layout.cshtml
@@ -138,6 +138,18 @@
                     </a>
                 </li>
                 <li>
+                    <a href="/Careers/Index">
+                        <i class="fab fa-product-hunt"></i>
+                        <span style="margin-left: 8px">Careers</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Jobs/Index">
+                        <i class="fab fa-product-hunt"></i>
+                        <span style="margin-left: 8px">Jobs</span>
+                    </a>
+                </li>
+                <li>
                     <a href="/AboutUses/Index">
                         <i class="fab fa-product-hunt"></i>
                         <span style="margin-left: 8px">AboutUs</span>
