--- a/Alphasoft/Views/Careers/_Edit.cshtml
+++ b/Alphasoft/Views/Careers/_Edit.cshtml
@@ -16,7 +16,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="OurCultureDescription"></label>
-                <textarea class="ourCulture" asp-for="OurCultureDescription"></textarea>
+                <textarea class="culture" asp-for="OurCultureDescription"></textarea>
                 <span asp-validation-for="OurCultureDescription" class="text-danger"></span>
             </div>
         </div>
@@ -32,7 +32,7 @@
     $(".benifit").summernote({
         height:80
     });
-    $(".ourCulture").summernote({
+    $(".culture").summernote({
         height:80
     });
     $("#career-editForm").on("submit", function (e) {
