--- a/Alphasoft/Views/Shared/_Layout.cshtml
+++ b/Alphasoft/Views/Shared/_Layout.cshtml
@@ -54,7 +54,18 @@
                         <span style="margin-left: 8px">Services</span>
                     </a>
                 </li>
-
+                <li>
+                    <a href="/Softwares/Index">
+                        <i class="fab fa-product-hunt"></i>
+                        <span style="margin-left: 8px">Softwares</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/SoftwaresCategories/Index">
+                        <i class="fab fa-product-hunt"></i>
+                        <span style="margin-left: 8px">SoftwaresCategories</span>
+                    </a>
+                </li>
                 <li>
                     <a href="/Contactus/Index">
                         <i class="fab fa-product-hunt"></i>
