--- a/Alphasoft/Views/ClientView/_GetCategoryWiseProducts.cshtml
+++ b/Alphasoft/Views/ClientView/_GetCategoryWiseProducts.cshtml
@@ -21,7 +21,7 @@
                                     <p>@item.ShortDescription</p>
 
                                     <div class="post-meta">
-                                        <span><i class="far fa-user"></i> Category <a href="#">@item.ProductCategory.Name</a> </span>
+                                        <span><i class="far fa-user"></i> Category <a href="/ClientView/Products/@item.ProductCategoryId">@item.ProductCategory.Name</a> </span>
                                         <span class="d-block mt-2"><a href="/ClientView/Product/@item.Id" class="btn btn-xs btn-light text-1 text-uppercase">Read More</a></span>
                                     </div>
 
